Default config file update for v1.9.9+

--- a/log4mt.conf
+++ b/log4mt.conf
@@ -1,19 +1,10 @@
 # Log4MT configuration file
-# AUTHOR:   Jay Allen, Endevver Consulting
+# AUTHOR:   Jay Allen, Endevver LLC
 # See README.txt in this package for more details
-# $Id$
 #
 # QUICKSTART: Simply specify a path to your preferred location for the Log4MT
 #             log file (see log_file below).  This file will be used exclusively
 #             for output using the default settings.
-
-####################
-#   ROOT LOGGER    #
-####################
-# The following sets the root logger's level to TRACE (the lowest/noisest level)
-# and attaches appenders for output to the log file, the standard error log and
-# the activity log.
-log4perl.logger                         = TRACE, Marker, File, Errorlog, MTLog
 
 ######################
 #   LOG FILE PATH    #
@@ -22,6 +13,14 @@ log4perl.logger                         = TRACE, Marker, File, Errorlog, MTLog
 # Log4MT log file.  This file should exist and have permissions that allow MT
 # to write to it.  If in doubt, use 777 (or "rwxrwxrwx").
 log_file                                = /PATH/TO/log4mt.log
+
+####################
+#   ROOT LOGGER    #
+####################
+# The following sets the root logger's level to TRACE (the lowest/noisest level)
+# and attaches appenders for output to the log file, the standard error log and
+# the activity log.
+log4perl.logger                         = TRACE, Marker, File, Errorlog, MTLog
 
 ######################
 # LAYOUT DEFINITIONS #
@@ -59,14 +58,6 @@ log4perl.appender.File.layout                       = ${layout_class}
 log4perl.appender.File.layout.ConversionPattern     = ${layout_pattern_dated}
 log4perl.appender.File.Threshold                    = DEBUG
 
-######################
-### MTLog appender ###
-######################
-log4perl.appender.MTLog                             = MT::Log::Log4perl::Appender::MT
-log4perl.appender.MTLog.warp_message                = 0
-log4perl.appender.MTLog.layout                      = Log::Log4perl::Layout::NoopLayout
-log4perl.appender.MTLog.Threshold                   = ERROR
-
 #######################
 ### Stderr appender ###
 #######################
@@ -75,3 +66,27 @@ log4perl.appender.Errorlog.stderr                   = 1,
 log4perl.appender.Errorlog.layout                   = ${layout_class}
 log4perl.appender.Errorlog.layout.ConversionPattern = ${layout_stderr}
 log4perl.appender.Errorlog.Threshold                = WARN
+
+######################
+### MTLog appender ###
+######################
+log4perl.appender.MTLogUnbuffered               = MT::Log::Log4perl::Appender::MT
+log4perl.appender.MTLogUnbuffered.warp_message  = 0
+log4perl.appender.MTLogUnbuffered.layout        = Log::Log4perl::Layout::NoopLayout
+log4perl.appender.MTLog                         = MT::Log::Log4perl::Appender::MT::Buffer
+log4perl.appender.MTLog.Threshold               = ERROR
+log4perl.appender.MTLog.appender                = MTLogUnbuffered
+log4perl.logger.mtlog                           = DEBUG, MTLog
+
+
+##########$############
+### MTMail appender ###
+###########$###########
+log4perl.appender.MTMailUnbuffered              = MT::Log::Log4perl::Appender::MT::Mail
+log4perl.appender.MTMailUnbuffered.layout       = Log::Log4perl::Layout::NoopLayout
+# log4perl.appender.MTMail.default_recipient    = 
+log4perl.appender.MTMail                        = MT::Log::Log4perl::Appender::MT::Buffer
+log4perl.appender.MTMail.appender               = MTMailUnbuffered
+log4perl.logger.mtmail                          = DEBUG, MTMail
+
+log4perl.logger.Log4MT.Plugin                   = DEBUG
