--- a/log4mt.conf
+++ b/log4mt.conf
@@ -14,6 +14,24 @@
 # to write to it.  If in doubt, use 777 (or "rwxrwxrwx").
 log_file                                = /PATH/TO/log4mt.log
 
+#  Module-specific (i.e. Category) logger settings
+#
+#    We recommend placing **ALL** module-specific logger level settings at
+#    the _very_ bottom of this file. Rationale:
+#
+#    * Maintains a healthy separation between the well-tested default config
+#      settings that, in most cases, shouldn't be modified, from the
+#      module-specific logger level settings that are constantly being added,
+#      modified and deleted by any number of developers.
+#    * Makes it incredibly easy (Go to EOF) to navigate to the settings;
+#      no searching/scrolling/paging down
+#    * Makes it simple to add a new directive without even opening the file:
+#          $ echo "..." >> log4mt.conf
+#    * Likewise, it is far easier to check the settings without needing to
+#      open the file:
+#          $ tail -30 log4mt.conf
+####
+
 ####################
 #   ROOT LOGGER    #
 ####################
@@ -89,4 +107,11 @@ log4perl.appender.MTMail                        = MT::Log::Log4perl::Appender::M
 log4perl.appender.MTMail.appender               = MTMailUnbuffered
 log4perl.logger.mtmail                          = DEBUG, MTMail
 
+################## Log4MT Diagnostic output setting ##################
+#   - WARN - No debugging and diagnostic output
+#   - INFO - Provides a shallow dump of the incoming application query
+#   - DEBUG - The above, plus outgoing template parameter values
+
 log4perl.logger.Log4MT.Plugin                   = DEBUG
+
+#################### Other logged modules ###########################
