--- a/log4mt.conf
+++ b/log4mt.conf
@@ -102,6 +102,7 @@ log4perl.logger.mtlog                           = DEBUG, MTLog
 ###########$###########
 log4perl.appender.MTMailUnbuffered              = MT::Log::Log4perl::Appender::MT::Mail
 log4perl.appender.MTMailUnbuffered.layout       = Log::Log4perl::Layout::NoopLayout
+# log4perl.appender.MTMail.default_sender       = 
 # log4perl.appender.MTMail.default_recipient    = 
 log4perl.appender.MTMail                        = MT::Log::Log4perl::Appender::MT::Buffer
 log4perl.appender.MTMail.appender               = MTMailUnbuffered
