--- a/log4mt.conf
+++ b/log4mt.conf
@@ -107,6 +107,7 @@ log4perl.appender.MTMailUnbuffered.layout       = Log::Log4perl::Layout::NoopLay
 log4perl.appender.MTMail                        = MT::Log::Log4perl::Appender::MT::Buffer
 log4perl.appender.MTMail.appender               = MTMailUnbuffered
 log4perl.logger.mtmail                          = DEBUG, MTMail
+log4perl.additivity.mtmail                      = 0
 
 ################## Log4MT Diagnostic output setting ##################
 #   - WARN - No debugging and diagnostic output
