warp_message must be disabled for MTMailUnbuffered

--- a/log4mt.conf
+++ b/log4mt.conf
@@ -101,6 +101,7 @@ log4perl.logger.mtlog                           = DEBUG, MTLog
 ### MTMail appender ###
 ###########$###########
 log4perl.appender.MTMailUnbuffered              = MT::Log::Log4perl::Appender::MT::Mail
+log4perl.appender.MTMailUnbuffered.warp_message = 0
 log4perl.appender.MTMailUnbuffered.layout       = Log::Log4perl::Layout::NoopLayout
 # log4perl.appender.MTMail.default_sender       = 
 # log4perl.appender.MTMail.default_recipient    = 
