--- a/addons/Log4MT.plugin/config.yaml
+++ b/addons/Log4MT.plugin/config.yaml
@@ -1,5 +1,5 @@
 name:               Log4MT
-version:            1.9.18
+version:            v2.0.1
 # Version is also required in Log4MT::Version
 author_name:        "Jay Allen, Endevver LLC"
 author_link:        http://endevver.com/
