--- a/log4mt.conf
+++ b/log4mt.conf
@@ -6,6 +6,20 @@
 #             log file (see log_file below).  This file will be used exclusively
 #             for output using the default settings.
 
+####
+#  IMPORTANT NOTE: Please place **ALL** module-specific logger level settings at the _very_ bottom of
+#  this file. Rationale:
+#
+#    * Maintains a healthy separation between the well-tested default config settings	that, in most
+#      cases, shouldn't be modified, from the module-specific logger level settings that are
+#      constantly being added, modified and deleted by any number of developers.
+#    * Makes it incredibly easy (Go to EOF) to navigate to the settings; no searching/scrolling/paging down
+#    * Makes it effortless to add a new directive without even opening the file:
+#          $ echo "..." >> log4mt.conf
+#    * Likewise, it is far easier to check the settings without needing to open the file:
+#          $ tail -30 log4mt.conf
+####
+
 ######################
 #   LOG FILE PATH    #
 ######################
@@ -13,24 +27,6 @@
 # Log4MT log file.  This file should exist and have permissions that allow MT
 # to write to it.  If in doubt, use 777 (or "rwxrwxrwx").
 log_file                                = /PATH/TO/log4mt.log
-
-#  Module-specific (i.e. Category) logger settings
-#
-#    We recommend placing **ALL** module-specific logger level settings at
-#    the _very_ bottom of this file. Rationale:
-#
-#    * Maintains a healthy separation between the well-tested default config
-#      settings that, in most cases, shouldn't be modified, from the
-#      module-specific logger level settings that are constantly being added,
-#      modified and deleted by any number of developers.
-#    * Makes it incredibly easy (Go to EOF) to navigate to the settings;
-#      no searching/scrolling/paging down
-#    * Makes it simple to add a new directive without even opening the file:
-#          $ echo "..." >> log4mt.conf
-#    * Likewise, it is far easier to check the settings without needing to
-#      open the file:
-#          $ tail -30 log4mt.conf
-####
 
 ####################
 #   ROOT LOGGER    #
@@ -80,7 +76,7 @@ log4perl.appender.File.Threshold                    = DEBUG
 ### Stderr appender ###
 #######################
 log4perl.appender.Errorlog                          = Log::Log4perl::Appender::Screen
-log4perl.appender.Errorlog.stderr                   = 1,
+log4perl.appender.Errorlog.stderr                   = 1
 log4perl.appender.Errorlog.layout                   = ${layout_class}
 log4perl.appender.Errorlog.layout.ConversionPattern = ${layout_stderr}
 log4perl.appender.Errorlog.Threshold                = WARN
@@ -88,33 +84,32 @@ log4perl.appender.Errorlog.Threshold                = WARN
 ######################
 ### MTLog appender ###
 ######################
-log4perl.appender.MTLogUnbuffered               = MT::Log::Log4perl::Appender::MT
-log4perl.appender.MTLogUnbuffered.warp_message  = 0
-log4perl.appender.MTLogUnbuffered.layout        = Log::Log4perl::Layout::NoopLayout
-log4perl.appender.MTLog                         = MT::Log::Log4perl::Appender::MT::Buffer
-log4perl.appender.MTLog.Threshold               = ERROR
-log4perl.appender.MTLog.appender                = MTLogUnbuffered
-log4perl.logger.mtlog                           = DEBUG, MTLog
-
+log4perl.appender.MTLogUnbuffered                   = MT::Log::Log4perl::Appender::MT
+log4perl.appender.MTLogUnbuffered.warp_message      = 0
+log4perl.appender.MTLogUnbuffered.layout            = Log::Log4perl::Layout::NoopLayout
+log4perl.appender.MTLog                             = MT::Log::Log4perl::Appender::MT::Buffer
+log4perl.appender.MTLog.Threshold                   = ERROR
+log4perl.appender.MTLog.appender                    = MTLogUnbuffered
+log4perl.logger.mtlog                               = DEBUG, MTLog
 
 ##########$############
 ### MTMail appender ###
 ###########$###########
-log4perl.appender.MTMailUnbuffered              = MT::Log::Log4perl::Appender::MT::Mail
-log4perl.appender.MTMailUnbuffered.warp_message = 0
-log4perl.appender.MTMailUnbuffered.layout       = Log::Log4perl::Layout::NoopLayout
-# log4perl.appender.MTMail.default_sender       = 
-# log4perl.appender.MTMail.default_recipient    = 
-log4perl.appender.MTMail                        = MT::Log::Log4perl::Appender::MT::Buffer
-log4perl.appender.MTMail.appender               = MTMailUnbuffered
-log4perl.logger.mtmail                          = DEBUG, MTMail
-log4perl.additivity.mtmail                      = 0
+log4perl.appender.MTMailUnbuffered                  = MT::Log::Log4perl::Appender::MT::Mail
+log4perl.appender.MTMailUnbuffered.warp_message     = 0
+log4perl.appender.MTMailUnbuffered.layout           = Log::Log4perl::Layout::NoopLayout
+# log4perl.appender.MTMail.default_sender             = me@example.com
+# log4perl.appender.MTMail.default_recipient          = newticket@ticketsystem.com
+log4perl.appender.MTMail                            = MT::Log::Log4perl::Appender::MT::Buffer
+log4perl.appender.MTMail.appender                   = MTMailUnbuffered
+log4perl.logger.mtmail                              = DEBUG, MTMail
+log4perl.additivity.mtmail                          = 0
 
 ################## Log4MT Diagnostic output setting ##################
 #   - WARN - No debugging and diagnostic output
 #   - INFO - Provides a shallow dump of the incoming application query
 #   - DEBUG - The above, plus outgoing template parameter values
 
-log4perl.logger.Log4MT.Plugin                   = DEBUG
+log4perl.logger.Log4MT.Plugin                       = DEBUG
 
 #################### Other logged modules ###########################
