--- a/log4mt.conf
+++ b/log4mt.conf
@@ -56,6 +56,7 @@ log4perl.appender.Marker.filename                   = ${log_file}
 log4perl.appender.Marker.mode                       = append
 log4perl.appender.Marker.umask                      = 0000
 log4perl.appender.Marker.recreate                   = 1
+log4perl.appender.Marker.utf8                       = 1
 log4perl.appender.Marker.layout                     = ${layout_class}
 log4perl.appender.Marker.layout.ConversionPattern   = ${layout_pattern_trace}
 log4perl.appender.Marker.Filter                     = TraceOnly
@@ -68,6 +69,7 @@ log4perl.appender.File.filename                     = ${log_file}
 log4perl.appender.File.mode                         = append
 log4perl.appender.File.umask                        = 0000
 log4perl.appender.File.recreate                     = 1
+log4perl.appender.File.utf8                         = 1
 log4perl.appender.File.layout                       = ${layout_class}
 log4perl.appender.File.layout.ConversionPattern     = ${layout_pattern_dated}
 log4perl.appender.File.Threshold                    = DEBUG
@@ -77,6 +79,7 @@ log4perl.appender.File.Threshold                    = DEBUG
 #######################
 log4perl.appender.Errorlog                          = Log::Log4perl::Appender::Screen
 log4perl.appender.Errorlog.stderr                   = 1
+log4perl.appender.Errorlog.utf8                     = 1
 log4perl.appender.Errorlog.layout                   = ${layout_class}
 log4perl.appender.Errorlog.layout.ConversionPattern = ${layout_stderr}
 log4perl.appender.Errorlog.Threshold                = WARN
@@ -86,10 +89,12 @@ log4perl.appender.Errorlog.Threshold                = WARN
 ######################
 log4perl.appender.MTLogUnbuffered                   = MT::Log::Log4perl::Appender::MT
 log4perl.appender.MTLogUnbuffered.warp_message      = 0
+log4perl.appender.MTLogUnbuffered.utf8              = 1
 log4perl.appender.MTLogUnbuffered.layout            = Log::Log4perl::Layout::NoopLayout
 log4perl.appender.MTLog                             = MT::Log::Log4perl::Appender::MT::Buffer
 log4perl.appender.MTLog.Threshold                   = ERROR
 log4perl.appender.MTLog.appender                    = MTLogUnbuffered
+log4perl.appender.MTLog.utf8                        = 1
 log4perl.logger.mtlog                               = DEBUG, MTLog
 
 ##########$############
@@ -98,9 +103,11 @@ log4perl.logger.mtlog                               = DEBUG, MTLog
 log4perl.appender.MTMailUnbuffered                  = MT::Log::Log4perl::Appender::MT::Mail
 log4perl.appender.MTMailUnbuffered.warp_message     = 0
 log4perl.appender.MTMailUnbuffered.layout           = Log::Log4perl::Layout::NoopLayout
+log4perl.appender.MTMailUnbuffered.utf8             = 1
 # log4perl.appender.MTMail.default_sender             = me@example.com
 # log4perl.appender.MTMail.default_recipient          = newticket@ticketsystem.com
 log4perl.appender.MTMail                            = MT::Log::Log4perl::Appender::MT::Buffer
+log4perl.appender.MTMail.utf8                       = 1
 log4perl.appender.MTMail.appender                   = MTMailUnbuffered
 log4perl.logger.mtmail                              = DEBUG, MTMail
 log4perl.additivity.mtmail                          = 0
@@ -113,3 +120,13 @@ log4perl.additivity.mtmail                          = 0
 log4perl.logger.Log4MT.Plugin                       = DEBUG
 
 #################### Other logged modules ###########################
+
+
+
+
+
+
+
+
+
+
